--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <!-- Arcade -->
   <PropertyGroup>
+    <MicrosoftDotNetApiCompatPackageVersion>1.0.0-beta.19474.3</MicrosoftDotNetApiCompatPackageVersion>
     <MicrosoftDotNetGenFacadesPackageVersion>1.0.0-beta.19461.7</MicrosoftDotNetGenFacadesPackageVersion>
     <MicrosoftDotNetXUnitExtensionsPackageVersion>2.4.1-beta.19461.7</MicrosoftDotNetXUnitExtensionsPackageVersion>
   </PropertyGroup>
